objects/nFORCE__Route_Group__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Route_App__c</fullName>
        <formula>nFORCE__Route__r.nFORCE__App__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route App</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Conditional_Display_Criteria__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <description>This field is manually populated. It is optional. This field uses a Forms Lite expression to specify criteria that must be met for this route to become visible to the user.</description>
        <inlineHelpText>A forms lite expression used to determine the visility of a route within the display.</inlineHelpText>
        <label>Conditional Display Criteria</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is manually populated. It is required. This field specifies the group a route is being linked to.</description>
        <inlineHelpText>Choose a group.</inlineHelpText>
        <label>Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Route Groups</relationshipLabel>
        <relationshipName>Route_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Has_Visibility_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is automatically populated via workflow. This field indicates whether or not the Visibility Criteria field has a value.</description>
        <label>Has Visibility Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Default_Context_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. If enabled, the route this is associated with will be displayed as the default subroute for its parent route—unless its parent route has a self-referencing subroute, in which case the self-referencing subroute is always used as the default. If disabled, the route is not set as the default.</description>
        <label>Is Default Context</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Forward_Navigation_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. If enabled, this field prevents the user from selecting the associated route from left navigation or subnavigation if they are on a route of lower order. The user can still navigate backwards to any route with these navigation options. If disabled, the user is not prevented from using these navigation options.</description>
        <inlineHelpText>Controls ability to use forward routing functionality.</inlineHelpText>
        <label>Is Forward Navigation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. It is optional. This field determines whether a route is displayed in the navigation or subnavigation bar. It does not support tools or actions.</description>
        <inlineHelpText>Controls route visibility.</inlineHelpText>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Orchestration_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system or administrator populates this optional text field with the process builder string name to call the current step the system uses for processing. By default, it is blank.</description>
        <inlineHelpText>This system or administrator populated field displays the process builder string name to call the current step the system uses for processing.</inlineHelpText>
        <label>Orchestration Step</label>
        <referenceTo>nFORCE__Workflow_Orchestration__c</referenceTo>
        <relationshipLabel>Route Groups</relationshipLabel>
        <relationshipName>Route_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Order__c</fullName>
        <description>This field is manually populated. It is required. This field specifies the order a route appears on the left navigation or subnavigation bar.</description>
        <inlineHelpText>The route display order.</inlineHelpText>
        <label>Order</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually populated. It is optional. This field specifies the parent route a route is being linked to. If a route has a parent route, it will display in the subnavigation bar for that route. If a parent route is not defined, it will display in the left navigation bar.</description>
        <inlineHelpText>The parent route record for this junction.</inlineHelpText>
        <label>Parent Route</label>
        <referenceTo>nFORCE__Route__c</referenceTo>
        <relationshipLabel>Child Route Groups</relationshipLabel>
        <relationshipName>Parent_Route_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is manually populated. It is optional. This field specifies a group that is comprised only of questions.</description>
        <label>Question Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Route Groups (Question Group)</relationshipLabel>
        <relationshipName>Question_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Route__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is manually populated. It is required. This field specifies the route a group is being linked to.</description>
        <inlineHelpText>Choose a route.</inlineHelpText>
        <label>Route</label>
        <referenceTo>nFORCE__Route__c</referenceTo>
        <relationshipLabel>Route Groups</relationshipLabel>
        <relationshipName>Route_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Visibility_Criteria__c</fullName>
        <description>This field is for a semicolon-separated list of values used to determine the visibility of this route group in the user interface.</description>
        <inlineHelpText>A semicolon-separated list of values used to determine the visibility of this route group in the user interface.</inlineHelpText>
        <label>Visibility Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Route Group should be automatically shared with Customer Portal Users.</description>
        <inlineHelpText>Check this field if this Route Group and associated records should be shared with Customer Portal Users.</inlineHelpText>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Auto_Decision_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this boolean field to indicate that Auto Decision needs to be run on the assigned route or route group.</description>
        <inlineHelpText>Select this field to run Auto Decision on the route or route group.</inlineHelpText>
        <label>OA Auto Decision Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Business_Credit_Pull_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this checkbox to indicate that a business&apos; credit needs to be run on the assigned route or route group.</description>
        <inlineHelpText>Select this checkbox to run a business&apos; credit on the route or route group.</inlineHelpText>
        <label>OA Business Credit Pull Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__OA_Credit_Pull_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators populate this boolean field to indicate that credits needs to be run on the assigned route or route group.</description>
        <inlineHelpText>Select this field to run credit on the route or route group.</inlineHelpText>
        <label>OA Credit Pull Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Route Group</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Route__c</columns>
        <columns>nFORCE__Conditional_Display_Criteria__c</columns>
        <columns>nFORCE__Question_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Route Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>